# ludumdare42

./: .gitignore  README.md
amethyst-extra/: Cargo.toml  README.md
amethyst-extra/src/: lib.rs
amethyst-extra/test/assets/mod1/config/: uniqueother
amethyst/amethyst_assets/src/: progress.rs
amethyst/amethyst_renderer/src/formats/: texture.rs
amethyst/book/book/: animation.html  game_data.html  getting_started.html  glossary.html  index.html  intro.html  pong_tutorial.html  print.html  searchindex.js
amethyst/book/book/animation/: channel.html  definition.html  interpolation.html  sampler.html
amethyst/book/book/appendices/: a_config_files.html
amethyst/book/book/pong_tutorial/: pong_tutorial_01.html  (+2 more)
game/: Cargo.toml  export_release.sh
game/assets/base/config/: display.ron  input.ron
game/assets/base/maps/level1/: map.ron  scene.ron
game/assets/base/maps/level2/: map.ron  scene.ron
game/assets/base/maps/level3/: map.ron  scene.ron
game/assets/base/maps/test/: map.ron  scene.ron
game/assets/base/prefabs/: player.ron
game/resources/: display_config.ron
game/src/: main.rs
game/src/data/: animation_state.rs  beatmap.rs  beatpoint.rs  direction.rs  falling_object.rs  gameplay_command.rs  gameplay_result.rs  gameplay_status.rs  hit_result.rs  mod.rs  player.rs  result_entities.rs  rotating.rs  rotating_object.rs
game/src/states/: change_control_state.rs  game_play_state.rs  map_selection_state.rs  mod.rs  score_state.rs  test.rs
game/src/states/map_selection/: beatmap_button.rs  map_selection_event.rs  map_selection_ui_event_handler_system.rs  mod.rs
game/src/systems/: animation_visual.rs  beatpoint_animation.rs  camera_follow_player.rs  change_controls.rs  gameplay_input.rs  make_objects_fall.rs  make_objects_rotate.rs  mod.rs  player_movement.rs  score_menu_animation.rs
game/src/utils/: map_loading.rs  mod.rs  music.rs  prefabs.rs
(+3 files in other folders)
