[package]
name = "amethyst-extra"
version = "0.3.0"
authors = ["jojolepro <jojolepromain@gmail.com>"]

[dependencies]
amethyst = { path = "../amethyst", features = ["nightly"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
ron = "0.2"
log = "0.4"
dirty = "0.2"
fern = { version = "0.5", features = ["colored"] }
crossterm = { git= "https://github.com/TimonPost/crossterm", branch = "input" }
partial_function = "0.4.0"
rand = "0.5.5"
