[package]
name = "ludumdare42"
version = "0.1.0"
authors = ["The Amethyst team for Ludum Dare 42"]

[dependencies]
amethyst = { path = "../amethyst", features = ["nightly"] }
amethyst-extra = { path = "../amethyst-extra" }
amethyst-rhusics = { git = "https://github.com/Moxinilian/amethyst-rhusics" }
log = "0.4.3"
rand = "0.5.5"

[patch.crates-io]
rhusics-core = { git = "https://github.com/rustgd/rhusics", rev = "87f15c29d4f664081d9091cdb21af34d468a3c09" }
rhusics-ecs = { git = "https://github.com/rustgd/rhusics", rev = "87f15c29d4f664081d9091cdb21af34d468a3c09" }