[package]
name = "ludumdare42"
version = "0.1.0"
authors = ["The Amethyst team for Ludum Dare 42"]

[dependencies]
amethyst = { path = "../amethyst", features = ["nightly"] }
amethyst-extra = { path = "../amethyst-extra" }
amethyst-rhusics = "0.2"
log = "0.4.3"
rand = "0.5.5"
serde = { version = "1", features = ["serde_derive"] }
ron = "0.3"